--- a/trunk/talend.workbench/build.properties
+++ b/trunk/talend.workbench/build.properties
@@ -29,7 +29,12 @@ bin.includes = icons/,\
                plugin.xml,\
                RELEASE.NOTES,\
                META-INF/,\
-               exist/
+               exist/,\
+               META-INF/lib/resolver.jar,\
+               META-INF/lib/serializer.jar,\
+               META-INF/lib/trang.jar,\
+               META-INF/lib/xercesSamples.jar,\
+               META-INF/lib/xml-apis.jar
 src.includes = src/,\
                META-INF/,\
                config.xml,\
