--- a/trunk/talend.mdm.libraries/.classpath
+++ b/trunk/talend.mdm.libraries/.classpath
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="lib/commons-codec.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/log4j.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/z.svnkit.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jboss-jaxws.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jaxb-api.jar"/>
@@ -28,11 +30,11 @@
 	<classpathentry exported="true" kind="lib" path="lib/z.crimson.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/z.jazzy-core.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jbossall-client.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/log4j.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/z.commons-lang-2.1.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="lib/zz.20.xtentis.connector.logging-mdb.ejb.jar"/>
+	<classpathentry kind="lib" path="lib/commons-beanutils-1.6.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
