--- a/trunk/talend.mdm.libraries/build.properties
+++ b/trunk/talend.mdm.libraries/build.properties
@@ -32,6 +32,6 @@ bin.includes = META-INF/,\
                lib/jaxb-api.jar,\
                lib/jboss-jaxws.jar,\
                lib/z.svnkit.jar,\
-               lib/commons-beanutils-1.6.1.jar,\
                lib/log4j.jar,\
-               lib/commons-codec.jar
+               lib/commons-codec.jar,\
+               lib/commons-beanutils-1.6.1.jar
