--- a/trunk/talend.connector.jdbc/build.xml
+++ b/trunk/talend.connector.jdbc/build.xml
@@ -9,7 +9,7 @@
 
 	<property name="version.props" value="version.properties" />
 
-	<property name="jboss.dir" value="c:/opt/jboss" />
+	<property name="jboss.dir" value="/opt/jboss" />
 
 	<property name="jar" value="jdbc.jar" />
 	<property name="rar" value="zz.20.xtentis.connector.jdbc.rar" />
