--- a/trunk/talend.mdm.nsis/build.properties
+++ b/trunk/talend.mdm.nsis/build.properties
@@ -8,11 +8,11 @@ jboss.instance.lib=${jboss.instance.dir}/lib
 ###################################################################
 ####the following properties used for build release#################
 ###################################################################
-#workspace where all the sourcecode is checkout
+#workspace that all the sourcecode is checkout
 workspace.dir=I:/MDM/tom
 tmp.dir=c:/tmp/nsis
 
-#checkout or update svn sourcedoe, it should only be 'co' or 'up'
+#checkout or update svn sourcecode, it should only be 'co' or 'up'
 svn_operation=up
 
 #svn properties setup
