--- a/trunk/talend.mdm.libraries/build.properties
+++ b/trunk/talend.mdm.libraries/build.properties
@@ -34,5 +34,5 @@ bin.includes = META-INF/,\
                lib/log4j.jar,\
                lib/commons-codec.jar,\
                lib/commons-beanutils-1.6.1.jar,\
-               lib/commons-io.jar,\
-               lib/commons-fileupload.jar
+               lib/commons-fileupload.jar,\
+               lib/commons-io.jar
