--- a/talend.mdm.libraries/.classpath
+++ b/talend.mdm.libraries/.classpath
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="lib/z.exist-1.2.6-xmldb.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/z.exist-1.2.6.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-io.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-fileupload.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-beanutils-1.6.1.jar"/>
@@ -15,7 +17,6 @@
 	<classpathentry exported="true" kind="lib" path="lib/z.poi-3.0.1-FINAL-20070705.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/z.xsom.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-logging.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/z.exist-1.2.4-xmldb.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-httpclient.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jboss-common.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jboss-jmx.jar"/>
