--- a/talend.mdm.libraries/build.properties
+++ b/talend.mdm.libraries/build.properties
@@ -20,7 +20,6 @@ bin.includes = META-INF/,\
                lib/jboss-system.jar,\
                lib/jbosssx.jar,\
                lib/commons-logging.jar,\
-               lib/z.exist-1.2.4-xmldb.jar,\
                lib/zz.20.xtentis.connector.logging-mdb.ejb.jar,\
                lib/z.dwr.jar,\
                lib/z.jaxrpc-impl.jar,\
@@ -35,4 +34,6 @@ bin.includes = META-INF/,\
                lib/commons-codec.jar,\
                lib/commons-beanutils-1.6.1.jar,\
                lib/commons-fileupload.jar,\
-               lib/commons-io.jar
+               lib/commons-io.jar,\
+               lib/z.exist-1.2.6-xmldb.jar,\
+               lib/z.exist-1.2.6.jar
