--- a/trunk/com.amalto.xmldb/.classpath
+++ b/trunk/com.amalto.xmldb/.classpath
@@ -3,12 +3,10 @@
 	<classpathentry excluding="com/amalto/xyleme/ejb/OLDXylemeWrapper.java|com/amalto/xyleme/test/ZZXylemeTest.java|com/amalto/xmldb/ejb/XmldbSFWrapperBean.java|com/amalto/xmldb/ejb/XmldbSLWrapperBean.java|com/amalto/xmldb/remote/facade/XmldbSLWrapperFacade.java|com/amalto/xmldb/ejb/|com/amalto/xmldb/remote/facade/|com/amalto/xmldb/remote/|com/amalto/xmldb/util/ToURLEncoded.java" kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/com.amalto.xmlserver.interfaces"/>
-	<classpathentry kind="lib" path="lib-1.2.4/common/z.exist-1.2.4-xmldb.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="http://xmldb-org.sourceforge.net/xapi/api/"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="lib-1.2.4/common/z.exist-1.2.4.xmlrpc-1.2-patched.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/talend.mdm.libraries"/>
+	<classpathentry kind="lib" path="lib-1.2.6/common/z.exist-1.2.6-xmldb.jar"/>
+	<classpathentry kind="lib" path="lib-1.2.6/common/z.exist-1.2.6-xmlrpc-client-3.1.1.jar"/>
+	<classpathentry kind="lib" path="lib-1.2.6/common/z.exist-1.2.6-xmlrpc-common-3.1.1.jar"/>
+	<classpathentry kind="lib" path="lib-1.2.6/common/z.exist-1.2.6-xmlrpc-server-3.1.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
