--- a/trunk/talend.ext.images.server/.classpath
+++ b/trunk/talend.ext.images.server/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/talend.mdm.libraries"/>
 	<classpathentry kind="lib" path="libs/ssim-0.6.0.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/com.amalto.core"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
