--- a/trunk/talend.ext.images.server/build.xml
+++ b/trunk/talend.ext.images.server/build.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project name="imageserver" default="all">
 	<property name="version.props" value="version.properties" />
-	<property name="jboss.dir" value="c:/opt/jboss" />
+	<property name="jboss.dir" value="/opt/jboss" />
 	<property name="jboss.instance.dir" value="${jboss.dir}/server/default" />
 	<property name="jboss.deploy.dir" value="${jboss.instance.dir}/deploy" />
 	<property name="jboss.instance.lib" value="${jboss.instance.dir}/lib" />
