--- a/trunk/talend.ext.images.server/src/WEB-INF/web.xml
+++ b/trunk/talend.ext.images.server/src/WEB-INF/web.xml
@@ -37,6 +37,26 @@
 		</init-param>
 	</servlet>
 	<servlet>
+		<servlet-name>ImageDeleteServlet</servlet-name>
+		<servlet-class>talend.ext.images.server.ImageDeleteServlet</servlet-class>
+		<init-param>
+			<param-name>output-format</param-name>
+			<param-value>json</param-value>
+		</init-param>
+		<init-param>
+			<param-name>delete-in-db</param-name>
+			<param-value>true</param-value>
+		</init-param>
+		<init-param>
+			<param-name>db-delegate-class</param-name>
+			<param-value>talend.ext.images.server.backup.DBDelegateExistImpl</param-value>
+		</init-param>
+		<init-param>
+			<param-name>delete-use-transaction</param-name>
+			<param-value>true</param-value>
+		</init-param>
+	</servlet>
+	<servlet>
 		<servlet-name>ImageScaleServlet</servlet-name>
 		<servlet-class>com.mchange.v2.ssim.SsimServlet</servlet-class>
 		<init-param>
@@ -57,6 +77,10 @@
 	<servlet-mapping>
 		<servlet-name>ImageUploadServlet</servlet-name>
 		<url-pattern>/secure/ImageUploadServlet</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>ImageDeleteServlet</servlet-name>
+		<url-pattern>/secure/ImageDeleteServlet</url-pattern>
 	</servlet-mapping>
 	<servlet-mapping>
 		<servlet-name>ImageScaleServlet</servlet-name>
