--- a/trunk/talend.mdm.libraries/build.properties
+++ b/trunk/talend.mdm.libraries/build.properties
@@ -36,4 +36,5 @@ bin.includes = META-INF/,\
                lib/commons-fileupload.jar,\
                lib/commons-io.jar,\
                lib/z.exist-1.2.6-xmldb.jar,\
-               lib/z.exist-1.2.6.jar
+               lib/z.exist-1.2.6.jar,\
+               lib/xercesImpl-2.9.1.jar
