--- a/trunk/talend.workbench/build.properties
+++ b/trunk/talend.workbench/build.properties
@@ -34,7 +34,9 @@ bin.includes = icons/,\
                META-INF/lib/serializer.jar,\
                META-INF/lib/trang.jar,\
                META-INF/lib/xercesSamples.jar,\
-               META-INF/lib/xml-apis.jar
+               META-INF/lib/xml-apis.jar,\
+               META-INF/lib/dom4j-1.6.1.jar,\
+               META-INF/lib/jaxen-1.1-beta-6.jar
 src.includes = src/,\
                META-INF/,\
                config.xml,\
