--- a/trunk/talend.mdm.libraries/build.properties
+++ b/trunk/talend.mdm.libraries/build.properties
@@ -38,4 +38,5 @@ bin.includes = META-INF/,\
                lib/z.exist-1.2.6-xmldb.jar,\
                lib/z.exist-1.2.6.jar,\
                lib/xercesImpl-2.9.1.jar,\
-               lib/commons-collections.jar
+               lib/commons-collections.jar,\
+               lib/bsh-2.0b2.jar
