--- a/trunk/talend.workbench/.classpath
+++ b/trunk/talend.workbench/.classpath
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry excluding="com/amalto/workbench/dialogs/ViewsListDialog.java|com/amalto/workbench/actions/ViewsListAction.java|com/amalto/workbench/utils/MenuEntry.java|com/amalto/workbench/editors/DataModelEditorPage2.java|com/amalto/workbench/editors/ProcessResultsPage.java|com/amalto/workbench/utils/GlobalUserInfo.java" kind="src" path="src"/>
+	<classpathentry exported="true" kind="lib" path="META-INF/lib/commons-collections-3.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="META-INF/lib/dom4j-1.6.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="META-INF/lib/jaxen-1.1-beta-6.jar"/>
 	<classpathentry exported="true" kind="lib" path="META-INF/lib/resolver.jar"/>
 	<classpathentry exported="true" kind="lib" path="META-INF/lib/serializer.jar"/>
 	<classpathentry exported="true" kind="lib" path="META-INF/lib/trang.jar"/>
