--- a/org.talend.mdm.workbench/plugin.xml
+++ b/org.talend.mdm.workbench/plugin.xml
@@ -6,10 +6,11 @@
          point="org.eclipse.ui.views">
       <category
             name="Talend Open MDM Workbench"
-            id="com.talend.workbench">
+            id="org.talend.mdm.workbench">
       </category>
       <view
-            category="com.talend.workbench"
+            allowMultiple="false"
+            category="org.talend.mdm.workbench"
             class="com.amalto.workbench.views.ServerView"
             icon="icons/talend-picto-small.gif"
             id="org.talend.openmdm.workbench.views.ServerView"
@@ -22,10 +23,11 @@
       <perspectiveExtension
             targetID="org.eclipse.ui.resourcePerspective">
          <view
+               closeable="false"
+               id="com.amalto.workbench.views.ServerView"
                ratio="0.5"
-               relative="org.eclipse.ui.views.TaskList"
                relationship="right"
-               id="com.amalto.workbench.views.ServerView">
+               relative="org.eclipse.ui.views.TaskList">
          </view>
       </perspectiveExtension>
    </extension>
@@ -34,22 +36,32 @@
       <editor
             class="com.amalto.workbench.editors.XObjectEditor"
             default="false"
-            icon="icons/project_wiz.png"
+            icon="icons/talend-picto-small.gif"
             id="com.amalto.workbench.editors.XObjectEditor"
             name="com.amalto.workbench.editors.XObjectEditor"/>
       <editor
             class="com.amalto.workbench.editors.XObjectBrowser"
             default="false"
-            icon="icons/project_wiz.png"
+            icon="icons/talend-picto-small.gif"
             id="com.amalto.workbench.editors.XObjectBrowser"
             name="com.amalto.workbench.editors.XObjectBrowser"/>
       <editor
             class="com.amalto.workbench.editors.XObjectRevisionBrowser"
             default="false"
-            icon="icons/project_wiz.png"
+            icon="icons/talend-picto-small.gif"
             id="com.amalto.workbench.editors.XObjectRevisionBrowser"
             name="com.amalto.workbench.editors.XObjectRevisionBrowser">
       </editor>
+   </extension>
+   <extension
+         point="org.eclipse.ui.perspectives">
+      <perspective
+            class="com.amalto.workbench.views.MDMPerspective"
+            fixed="true"
+            icon="icons/talend-picto-small.gif"
+            id="org.talend.mdm.perspective"
+            name="Master Data Management">
+      </perspective>
    </extension>
 
 </plugin>
