--- a/org.talend.mdm.workbench/.classpath
+++ b/org.talend.mdm.workbench/.classpath
@@ -10,6 +10,12 @@
 	<classpathentry exported="true" kind="lib" path="META-INF/lib/trang.jar"/>
 	<classpathentry exported="true" kind="lib" path="META-INF/lib/xercesSamples.jar"/>
 	<classpathentry exported="true" kind="lib" path="META-INF/lib/xml-apis.jar"/>
+	<classpathentry kind="lib" path="E:/MDM/tom/org.talend.mdm.workbench/META-INF/lib/httpmime-4.0.jar"/>
+	<classpathentry kind="lib" path="E:/MDM/tom/org.talend.mdm.workbench/META-INF/lib/apache-mime4j-0.6.jar"/>
+	<classpathentry kind="lib" path="E:/MDM/tom/org.talend.mdm.workbench/META-INF/lib/commons-codec-1.3.jar"/>
+	<classpathentry kind="lib" path="E:/MDM/tom/org.talend.mdm.workbench/META-INF/lib/commons-logging-1.1.1.jar"/>
+	<classpathentry kind="lib" path="E:/MDM/tom/org.talend.mdm.workbench/META-INF/lib/httpclient-4.0.jar"/>
+	<classpathentry kind="lib" path="E:/MDM/tom/org.talend.mdm.workbench/META-INF/lib/httpcore-4.0.1.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/jwsdp-shared"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/jwsdp-endorsedlibs"/>
@@ -18,5 +24,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JAXB"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/commons-httpclient"/>
+	<classpathentry kind="lib" path="/org.talend.mdm.ext.publish.component/libs/com.noelios.restlet.ext.servlet_2.5.jar" sourcepath="F:/Src/OpenSourceProject/restlet/restlet-1.1.6/src"/>
+	<classpathentry kind="lib" path="/org.talend.mdm.ext.publish.component/libs/com.noelios.restlet.jar" sourcepath="F:/Src/OpenSourceProject/restlet/restlet-1.1.6/src"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
